--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-fileupload": "^0.4.0",
     "helmet": "^3.11.0",
     "http-status": "^1.0.1",
     "modern-syslog": "^1.1.4",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "nodemailer": "^4.4.2"
   },
   "devDependencies": {
     "eslint": "^4.18.0",
